--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ body{
 
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 background-color:seashell;
-padding: 20px;
 
+margin: auto;
 }
 
 header nav {
@@ -25,32 +25,47 @@ header nav ul li{
    height: 50px;
    line-height: 50px;
 }
+#imgid{
 
-section:first-child{
+    float: left;
 
-    margin-bottom: 30px;
-    width: 100%;
 }
 
-section :last-child img{
-
-    margin-top: 30px;
-}
 
 h3{
     width: 50%;
     float :right;
-    margin-top: 30px;
+
    
 }
-p{
-    width: 50%;
-    float :right;
-    text-align: justify;
 
+main{
 
+    margin: auto;
+    margin-left: 13%;
 }
+
+    p {
+        width: 37%;
+        float: right;
+        text-align: justify;
+        margin-right: 215px;
+    }
+    
+
+
+
 #ok{
     margin-left: 30px;
     margin-right: 30px;
+}
+#hp{
+
+    float: right;
+}
+
+section{
+
+    margin-top: 20px;
+  
 }
